# CSC522-S26-proj-deadlock-match-forecast

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  collect.sh  fetch_hero_stats.py  fetch_matches.py  fetch_player_stats.py  log_utils.py  upload_to_hf.py  validate.py
docs/: CSC522 S26 - Project Proposal - Design Document.docx  leakage_analysis_report.md  midway_experiment_log.md  midway_report_grading_criteria.md  midway_report_plan.md  proposal_summary.md  results_log.md  ~$C522 S26 - Project Proposal - Design Document.docx
notebooks/: 01_eda_preprocessing.html  01_eda_preprocessing.ipynb  02_models copy.html  02_models copy.ipynb  02_models.ipynb  03_leakage_audit.ipynb  04_hyperparam_search.ipynb  05_final_models.ipynb  11_leakage_analysis.ipynb
results/: best_params.csv  best_params_round2.csv  best_params_round3.csv  best_params_round4.csv  hpsearch_lr_p1.csv  hpsearch_lr_p2.csv  hpsearch_rf_p1.csv  hpsearch_rf_p1_round2.csv  hpsearch_rf_p1_round3.csv  hpsearch_rf_p2.csv  hpsearch_rf_p2_round2.csv  hpsearch_xgb_p1.csv  hpsearch_xgb_p1_round2.csv  hpsearch_xgb_p1_round3.csv  hpsearch_xgb_p1_round4.csv  hpsearch_xgb_p2.csv  hpsearch_xgb_p2_round2.csv  hpsearch_xgb_p2_round3.csv  hpsearch_xgb_p2_round4.csv  leakage_ablation_clean.csv  leakage_ablation_feature_analysis.csv  leakage_ablation_full.csv  leakage_profile_results.csv  main_clean.csv  phase1_refinement_summary.csv  phase2_range_suggestions.csv
src/: pipeline.py  preprocess.py
